# price-monitor-etl

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yaml  environment.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260320_0001_baseline_sprint_7_schema.py
configs/: settings.yaml
configs/sources/: site_a.yaml  site_b.yaml
dags/: pricemonitor_daily_pipeline.py  pricemonitor_reports.py  pricemonitor_source_scrape.py
docker/airflow/: Dockerfile
src/pricemonitor/: __init__.py  config.py  logging_config.py  main.py
src/pricemonitor/api/: __init__.py  app.py  deps.py  read_service.py  schemas.py
src/pricemonitor/api/routes/: alerts.py  health.py  (+4 more)
src/pricemonitor/fetchers/: __init__.py  base.py  browser_fetcher.py  factory.py  http_fetcher.py
src/pricemonitor/models/: __init__.py  db_models.py  schemas.py
src/pricemonitor/parsers/: normalization.py
src/pricemonitor/pipelines/: __init__.py  airflow_entrypoints.py  alert_run.py  common.py  process_run.py  report_run.py  scrape_run.py
src/pricemonitor/scrapers/: __init__.py  base.py  dummy_site_a.py  registry.py  site_a.py  site_b.py
src/pricemonitor/services/: alert.py  change_detection.py  export.py  process.py  validation.py
src/pricemonitor/storage/: __init__.py  database.py  migrations.py  repositories.py
tests/: test_airflow_entrypoints.py  test_alert.py  test_api.py  test_change_detection.py  test_export.py  test_fetcher_factory.py  test_pipeline.py  test_process.py  test_smoke.py  test_storage_repositories.py  test_validation.py
