[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "price-monitor-etl"
version = "0.1.0"
description = "Production-style ETL pipeline for monitoring e-commerce product prices."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3.0",
  "PyYAML>=6.0",
  "SQLAlchemy>=2.0,<3.0",
  "psycopg[binary]>=3.1,<4.0",
  "requests>=2.31,<3.0",
  "python-dotenv>=1.0,<2.0",
  "beautifulsoup4>=4.12,<5.0",
  "playwright>=1.52,<2.0",
  "alembic>=1.18,<1.19",
  "fastapi>=0.115,<1.0",
]
authors = [
  { name = "Georgios Panagiotopoulos" }
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "httpx>=0.27,<1.0",
  "uvicorn>=0.30,<1.0",
]

[project.scripts]
pricemonitor = "pricemonitor.main:cli"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
